--- a/totsnyc/app/views/pages/about.html.haml
+++ b/totsnyc/app/views/pages/about.html.haml
@@ -1,2 +1,9 @@
-%h1 Pages#about
-%p Find me in app/views/pages/about.html.erb
+%h1 About totsNYC
+%h2 Child development through participation
+%h3 Local community for toddlers and their parents
+%ul
+  %li local events
+  %li play date scheduling
+  %li resources directories
+  %li shared lists
+  %li knowledge exchange: common tasks & guildelines
