--- a/totsnyc/app/views/pages/about.html.haml
+++ b/totsnyc/app/views/pages/about.html.haml
@@ -2,8 +2,8 @@
 %h2 Child development through participation
 %h3 Local community for toddlers and their parents
 %ul
-  %li local events
-  %li play date scheduling
-  %li resources directories
-  %li shared lists
-  %li knowledge exchange: common tasks & guildelines
+  %li= link_to 'local events', events_url
+  %li= link_to 'play date scheduling', scheduling_url
+  %li= link_to 'resources directories', directories_url
+  %li= link_to 'shared lists', lists_url
+  %li= link_to 'knowledge exchange: common tasks & guildelines', tasks_url
