restarting work at 3PM

--- a/totsnyc/app/views/pages/about.html.haml
+++ b/totsnyc/app/views/pages/about.html.haml
@@ -1,9 +1,21 @@
 %h1 About totsNYC
 %h2 Child development through participation
 %h3 Local community for toddlers and their parents
+Core features:
 %ul
   %li= link_to 'local events', events_url
   %li= link_to 'play date scheduling', scheduling_url
   %li= link_to 'resources directories', directories_url
   %li= link_to 'shared lists', lists_url
   %li= link_to 'knowledge exchange: common tasks & guildelines', tasks_url
+  %li= link_to 'articles / bulletin board / marketplace', bbs_url
+  %li= link_to 'newsfeed', newsfeed_url
+Technology
+%ul
+  %li SMS group notifications 
+  %li Friendly phone
+  %li FaceBook integration
+  %li Tagging by developmental hierarchy / dichotomy (areas of interest)
+  %li Semantic tagging
+  %li Session tracking
+
