--- a/totsnyc/app/views/pages/directories.html.haml
+++ b/totsnyc/app/views/pages/directories.html.haml
@@ -1,8 +1,13 @@
-%h1 Local events
+%h1 Local Resource Directories
+%h2 (Children's stores, public spaces, playgrounds, parks, zoos, daycare facilities, schools, doctors, etc.)
 %ul
-  %li view default event selection
-  %li search events / view event groupings
-  %li add event (moderated)
-  %li bookmark event
-  %li register for event
+  %li view default resource selection
+  %li search resource / view resource groupings
+  %li add resource (moderated)
+  %li bookmark resource
+  %li add resource-related event
   %li provide feedback
+  %li manage resource categories
+Implementation details
+%ul
+  %li venue / multi-venue
