--- a/totsnyc/app/views/pages/events.html.haml
+++ b/totsnyc/app/views/pages/events.html.haml
@@ -1,8 +1,17 @@
 %h1 Local events
+%h2 Borders story time, puppet shows, group outings, toddler-friendly carnivals, street fares, etc.
 %ul
   %li view default event selection
-  %li search events / view event groupings
-  %li add event (moderated)
+  %li view event groupings
+  %li search events / make groupings
+  %li add event link (moderated)
   %li bookmark event
   %li register for event
-  %li provide feedback
+  %li leave event comments
+  %li rate event
+  %li manage event tags / categories
+Implementation details
+%ul
+  %li link to geography
+  %li categories / tagging
+  %li dates / duration / recurrence
