--- a/totsnyc/app/views/pages/lists.html.haml
+++ b/totsnyc/app/views/pages/lists.html.haml
@@ -1,8 +1,8 @@
 %h1 Lists
+%h2 (Age and task-specific shopping lists, reading lists, to-do lists, school-selection lists, etc.)
 %ul
   %li view default lists
-  %li search events / view event groupings
-  %li add event (moderated)
-  %li bookmark event
-  %li register for event
-  %li provide feedback
+  %li search lists / view list categories
+  %li add your own list
+  %li copy list
+  %li provide feedback on list / item
