--- a/totsnyc/app/views/pages/scheduling.html.haml
+++ b/totsnyc/app/views/pages/scheduling.html.haml
@@ -1,8 +1,7 @@
-%h1 Scheduling
+%h1 Play Date Scheduling
 %ul
-  %li view default event selection
-  %li search events / view event groupings
-  %li add event (moderated)
-  %li bookmark event
-  %li register for event
+  %li view my / local / popular play date schedule
+  %li propose a play date
+  %li bookmark a play date
+  %li register for a play date
   %li provide feedback
