--- a/totsnyc/app/views/pages/tasks.html.haml
+++ b/totsnyc/app/views/pages/tasks.html.haml
@@ -1,8 +1,4 @@
-%h1 Tasks
+%h1 Tasks, Projects, & Guidelines
+%h2 Actionable lists, step-by-step guides, knowledge base, calendar export, etc.
 %ul
-  %li view default event selection
-  %li search events / view event groupings
-  %li add event (moderated)
-  %li bookmark event
-  %li register for event
-  %li provide feedback
+  %li view current tasks / status
