--- a/t4/app/views/home/index.html.haml
+++ b/t4/app/views/home/index.html.haml
@@ -7,3 +7,7 @@
   = link_to "Locations", locations_path
   = link_to "CallLogs", call_logs_path
   = link_to "PhoneIds", phone_ids_path
+  = link_to "PlayDates", play_dates_path
+  = link_to "Signups", signups_path
+  = link_to "Tags", tags_path
+  = link_to "Taggings", taggings_path
