--- a/t4/app/views/play_dates/show.html.haml
+++ b/t4/app/views/play_dates/show.html.haml
@@ -5,7 +5,7 @@
   = @play_date.name
 %p
   %b Location:
-  = @play_date.location
+  = @play_date.location.name
 
 = link_to 'Edit', edit_play_date_path(@play_date)
 \|
