--- a/t4/app/views/play_dates/_form.html.haml
+++ b/t4/app/views/play_dates/_form.html.haml
@@ -11,6 +11,6 @@
     = f.text_field :name
   .field
     = f.label :location
-    = f.text_field :location
+    = f.collection_select :location_id, Location.all, :id, :name
   .actions
     = f.submit 'Save'
