--- a/t4/app/views/signups/index.html.haml
+++ b/t4/app/views/signups/index.html.haml
@@ -10,8 +10,8 @@
 
   - @signups.each do |signup|
     %tr
-      %td= signup.playdate
-      %td= signup.person
+      %td= signup.play_date.name
+      %td= signup.person.nick
       %td= link_to 'Show', signup
       %td= link_to 'Edit', edit_signup_path(signup)
       %td= link_to 'Destroy', signup, :confirm => 'Are you sure?', :method => :delete
