--- a/pretty/app/views/home/index.html.haml
+++ b/pretty/app/views/home/index.html.haml
@@ -1,4 +1,15 @@
 #header
   %h1 Home#index
+.two-col
+  .header
+    Header
+    %br this is some header stub
+  .content
+    Content
+    %br this is content stub
+  %br
+  .sidebar Sidebar
+  %br
+  .footer Footer
 #ilya
   %p Find me in app/views/home/index.html.haml
