--- a/pretty/app/assets/stylesheets/_base.css.scss
+++ b/pretty/app/assets/stylesheets/_base.css.scss
@@ -28,6 +28,15 @@ $blueprint-font-family: Georgia, "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 
 body {
+  .c1 {
+    @include column(5);
+  }
+  .c2 {
+    @include column(6);
+  }
+  .c3 {
+    @include column(7, true);
+  }
 }
 
 #container {
