--- a/rent/app/views/home/index.html.haml
+++ b/rent/app/views/home/index.html.haml
@@ -1,2 +1,5 @@
 %h1 Rakita Real Estate
 %p Listings Management System
+= link_to 'manage listings', listings_path
+%br manage agents
+%br view stats
