--- a/rent/app/views/layouts/application.html.haml
+++ b/rent/app/views/layouts/application.html.haml
@@ -15,6 +15,9 @@
       - flash.each do |name, msg|
         = content_tag :div, msg, :id => "flash_#{name}"
 
+      - if logged_in?
+        %h4= link_to current_user.email, logout_path
+
       - if show_title?
         %h1= yield(:title)
 
