--- a/rent/app/views/home/index.html.haml
+++ b/rent/app/views/home/index.html.haml
@@ -1,5 +1,9 @@
 %h1 Rakita Real Estate
-%p Listings Management System
-= link_to 'manage listings', listings_path
-%br manage agents
-%br view stats
+-if current_user
+  %p Listings Management System
+  = link_to 'manage listings', listings_path
+  %br manage agents
+  %br view stats
+  %p= current_user.email if current_user
+- else
+  %p So, you wanna rent something?
