--- a/rent/app/views/buildings/show.html.haml
+++ b/rent/app/views/buildings/show.html.haml
@@ -5,8 +5,12 @@
   = @building.address
 %p
   %strong Company:
-  = @building.company
+  = @building.company.name if @building.company
+%p
+  = image_tag "http://maps.google.com/maps/api/staticmap?size=450x300&sensor=false&zoom=16&markers=label:A%7C#{@building.latitude}%2C#{@building.longitude}"
 
+%p
+= "Lat: #{@building.latitude} Lon: #{@building.longitude}"
 %p
   = link_to "Edit", edit_building_path(@building)
   |
