more mapping stuff

--- a/rent/app/views/buildings/index.html.haml
+++ b/rent/app/views/buildings/index.html.haml
@@ -13,3 +13,5 @@
       %td= link_to 'Destroy', building, :confirm => 'Are you sure?', :method => :delete
 
 %p= link_to "New Building", new_building_path
+
+= image_tag @map_url
