--- a/rent/app/views/home/index.html.haml
+++ b/rent/app/views/home/index.html.haml
@@ -1,4 +1,5 @@
-%h1 Rakita Real Estate
+%h1 CLUB212
+%h3 A Service of Rakita Realty, INC.
 -if current_user
   %p Listings Management System
   = link_to 'manage listings', listings_path
