--- a/rent/app/views/home/_anon.html.haml
+++ b/rent/app/views/home/_anon.html.haml
@@ -4,7 +4,7 @@ We will be showing these apartments
   later tonight and 
 all day on #{@tomorrow}. 
 
-%p You may call us at (646) 699-4692 for updated apartment availability or to find the status of your rental application.
+%p You may call us at (646) 699-4692 for updated apartment availability or to find out the status of your rental application.
 
 %p Enter your phone number to retrieve a listing of available apartments, schedule a viewing, or to receive real time updates.
 
