starbucks - going home

--- a/rent/app/views/home/_anon.html.haml
+++ b/rent/app/views/home/_anon.html.haml
@@ -8,6 +8,6 @@ all day on #{@tomorrow}.
 
 %p Enter your phone number to retrieve a listing of available apartments, schedule a viewing, or to receive real time updates.
 
-= image_tag @map_url
+= image_tag map_url
 
 
