hidden field working

--- a/rent/app/views/listings/_unit.html.haml
+++ b/rent/app/views/listings/_unit.html.haml
@@ -1,6 +1,7 @@
 = semantic_form_for @listing do |f|
   = f.error_messages
   %p
+    = f.input :building_id, :as => :hidden, :value => @building.id
     = f.inputs :unit
   %p
     = f.buttons
