--- a/pitchfork/app/views/layouts/application.html.haml
+++ b/pitchfork/app/views/layouts/application.html.haml
@@ -18,4 +18,6 @@
       - if show_title?
         %h1= yield(:title)
 
+      %h2= link_to 'Login with Facebook', auth_at_provider_path(:provider => :facebook)
+
       = yield
