--- a/pitchfork/app/views/layouts/application.html.haml
+++ b/pitchfork/app/views/layouts/application.html.haml
@@ -18,6 +18,9 @@
       - if show_title?
         %h1= yield(:title)
 
+      - if logged_in?
+        %h2= 'Logged in as ' + current_user.name
+        = image_tag avatar(current_user)
       %h2= link_to 'Login with Facebook', auth_at_provider_path(:provider => :facebook)
 
       = yield
